force-app/src/objects/MicrosoftAzure_ClientCredentials__mdt.object
<CustomObject>
    <fields>
        <fullName>Callback_URL__c</fullName>
        <label>Callback URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <label>Client ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scopes__c</fullName>
        <defaultValue>&quot;https://graph.microsoft.com/.default&quot;</defaultValue>
        <label>Scopes</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tenant_ID__c</fullName>
        <label>Tenant ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>MicrosoftAzure_ClientCredentials</label>
    <pluralLabel>MicrosoftAzure_ClientCredentials</pluralLabel>
</CustomObject>